--- a/app/landing.css
+++ b/app/landing.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 @layer base {
+  * {
+    @apply font-sans;
+  }
   :root {
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
@@ -54,6 +57,8 @@
     --white_a700_a5: #ffffffa5;
     --black_600: #565d76;
     --gray_shadow: #00000029;
+    --gray_600:#475467;
+    --gray_200:#EAECF0;
 
     /* -------Shadow variables------- */
     --shadow-xs: 0 2px 4px -2px #1018280f;
